--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
   },
   "dependencies": {
     "babel-plugin-react-intl": "^2.1.3",
+    "bluebird": "^3.5.1",
     "classnames": "^2.2.5",
     "dev": "^0.1.3",
     "frontend-react-components": "https://amanami00:aman8090@github.com/theorchard/frontend-react-components.git#v1.2.62",
